re-wrote html, js and css code due to forgetting original work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,85 +1,88 @@
-*, *::before, *::after {
-     box-sizing: border-box;
-     font-family: Verdana Rounded;
-}
-
-:root {
-    --hue-neutral: #e8b202;
-    --hue-wrong: #fc1703;
-    --hue-correct: #02d95f;
-}
-
 body {
-    --hue:var(--hue-neutral);
-    background-color: hsl(var(--hue), 100%, 20%);
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
+  font-family: Arial;
+  font-size: 120%;
 }
 
-body.correct {
-    --hue: var(--hue-correct);
+a {
+  color: #563d7c;
+  text-decoration: none;
+  transition: color 0.1s;
 }
 
-body.wrong {
-    --hue: var(--hue-wrong);
+a:hover {
+  color: #8570a5;
 }
 
-.container {
-    width: 800px;
-    max-width: 80%;
-    background-color: whitesmoke;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0 0 10px 2px;
+button {
+  display: inline-block;
+  margin: 5px;
+  cursor: pointer;
+  font-size: 100%;
+  background-color: #563d7c;
+  border-radius: 5px;
+  padding: 2px 10px;
+  color: white;
+  border: 0;
+  transition: background-color 0.1s;
 }
 
-.btn-grid {
-    display: grid;
-    grid-template-columns: repeat(2,auto);
-    gap: 10px;
-    margin: 20px 0;
+button:hover {
+  background-color: #8570a5;
 }
 
-.btn {
-    --hue: var(--hue-neutral);
-    border: 1px solid hsl(var(--hue), 100%, 30%);
-    background-color: hsl(var(--hue), 100%, 50%);
-    border-radius: 5px;
-    padding: 5px 10px;
-    color: whitesmoke;
-    outline: none;
+.choices button {
+  display: block;
 }
 
-.btn:hover {
-    border-color: black;
+input[type="text"] {
+  font-size: 100%;
 }
 
-.btn.correct {
-    --hue: var(--hue-correct);
-    color: black;
+ol {
+  padding-left: 0px;
+  max-height: 400px;
+  overflow: auto;
 }
 
-.btn.wrong {
-    --hue: var(--hue-wrong);
+li {
+  padding: 5px;
+  list-style: decimal inside none;
 }
 
-.start-btn .next-btn {
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 10px 20px;
+li:nth-child(odd) {
+  background-color: #f3edfc;
 }
 
-.controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.wrapper {
+  margin: 100px auto 0 auto;
+  max-width: 600px;
 }
 
 .hide {
-    display: none;
+  display: none;
+}
+
+.start {
+  text-align: center;
+}
+
+.scores {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.feedback {
+  font-style: italic;
+  font-size: 120%;
+  margin-top: 20px;
+  padding-top: 10px;
+  color: gray;
+  border-top: 2px solid #ccc;
+}
+
+.timer {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
