update style and make changes to highscore js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 a {
-  color: #563d7c;
+  color: #1b5aa3;
   text-decoration: none;
   transition: color 0.1s;
 }
@@ -56,6 +56,7 @@ li:nth-child(odd) {
 .wrapper {
   margin: 100px auto 0 auto;
   max-width: 600px;
+  display: inline-block;
 }
 
 .hide {
@@ -73,16 +74,14 @@ li:nth-child(odd) {
 }
 
 .feedback {
-  font-style: italic;
   font-size: 120%;
   margin-top: 20px;
   padding-top: 10px;
   color: rgb(109, 9, 202);
-  border-top: 2px solid #ccc;
 }
 
 .timer {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 60px;
+  left: 10px;
 }
